--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/intern-platform/intern-platform-alpha#readme",
   "dependencies": {
+    "bcrypt": "^2.0.0",
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "moment": "^2.22.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.37.6"
