--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/intern-platform/intern-platform-alpha#readme",
   "dependencies": {
-    "bcrypt": "^2.0.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
