--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=postgres://postgres:password@localhost:5432/sad_db
+DATABASE_URL=postgres://postgres:jvertulfo3@localhost:5433/sad_db
 SESSION_SECRET=secret_key
 ADMIN_REGISTER_TOKEN=vertulfoADMINkey
